using custom elements rather than render with skypack'd lit framework

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
         }
       }
     </script>
-    <script type="module" src="./nav-bar.js"></script>
+    <script type="module" src="./app.js"></script>
   </head>
 
   <body>
-    <nav-bar></nav-bar>
+    <deepgram-starter-ui></deepgram-starter-ui>
   </body>
 </html>
