--- a/index.html
+++ b/index.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="//unpkg.com/tailwindcss-jit-cdn@1.3.0"></script>
-    <script type="tailwind-config">
-      {
-        theme: {
-          extend: {
-            colors: {}
-          }
-        }
-      }
-    </script>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <script type="module" src="./app.js"></script>
+    <script type="module" src="./components/app-spinner.js"></script>
+    <link rel="stylesheet" href="preflight.css" />
+    <link
+      href="https://fonts.googleapis.com/css?family=Fira+Code"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="style.css" />
   </head>
 
   <body>
     <deepgram-starter-ui></deepgram-starter-ui>
+    <!-- <app-spinner></app-spinner> -->
   </body>
 </html>
